--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/blend2d"]
 	path = libs/blend2d
 	url = https://github.com/blend2d/blend2d.git
+[submodule "libs/nlohmann"]
+	path = libs/nlohmann
+	url = https://github.com/nlohmann/json.git
