--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 project(karatext)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/blend2d/src)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/nlohmann/single_include/nlohmann)
 add_subdirectory(libs/blend2d)
 add_subdirectory(learning)
+add_executable(render render.cc)
+target_link_libraries(render glog)
