Thử làm nổi bằng font khác

--- a/learning/CMakeLists.txt
+++ b/learning/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_executable(capi capi.c)
 add_executable(text text.cc)
 add_executable(textcenter textcenter.cc)
-foreach (p capi text textcenter)
+add_executable(twosent twosent.cc)
+add_executable(twostyle twostyle.cc)
+foreach (p capi text textcenter twosent twostyle)
   target_link_libraries(${p} blend2d)
 endforeach()
