Sinh khung hình cho phần chữ chạy

--- a/learning/CMakeLists.txt
+++ b/learning/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(text text.cc)
 add_executable(textcenter textcenter.cc)
 add_executable(twosent twosent.cc)
 add_executable(twostyle twostyle.cc)
-foreach (p capi text textcenter twosent twostyle)
+add_executable(frame frame.cc)
+foreach (p capi text textcenter twosent twostyle frame)
   target_link_libraries(${p} blend2d)
 endforeach()
